# Scribe

./: .gitignore  README.ko.md  README.md  SECURITY.ko.md  SECURITY.md  pyproject.toml
.github/workflows/: build-inspection.yml  ci.yml  dependency-audit.yml  repository-policy.yml
docs/: USER_GUIDE.en.md  USER_GUIDE.ko.md
docs/en/: README.md  api-reference.md  artifacts.md  capture-patterns.md  core-concepts.md  degradation-and-errors.md  examples.md  getting-started.md  sinks-and-storage.md
docs/ko/: README.md  api-reference.md  artifacts.md  capture-patterns.md  core-concepts.md  degradation-and-errors.md  examples.md  getting-started.md  sinks-and-storage.md
examples/: artifact_binding_workflow.py  evaluation_workflow.py  training_workflow.py
scripts/: check_build_artifacts.py  check_repo_security.py
src/scribe/: __init__.py  canonical.py  exceptions.py  spine_bridge.py  utils.py
src/scribe/adapters/: __init__.py
src/scribe/adapters/kafka/: __init__.py  producer.py
src/scribe/adapters/local/: __init__.py  jsonl.py  outbox.py
src/scribe/adapters/s3/: __init__.py  json_objects.py
src/scribe/api/: __init__.py  session.py
src/scribe/artifacts/: __init__.py  models.py  service.py
src/scribe/config/: __init__.py  models.py
src/scribe/context/: __init__.py  state.py
src/scribe/events/: __init__.py  models.py  service.py
src/scribe/metrics/: __init__.py  models.py  service.py
src/scribe/replay/: __init__.py  cli.py  restore.py  service.py
src/scribe/results/: __init__.py  models.py
src/scribe/runtime/: builders.py  dispatch.py  scopes.py  session.py
src/scribe/serialization/: __init__.py  json_ready.py
src/scribe/sinks/: __init__.py  base.py  composite.py  memory.py
src/scribe/traces/: __init__.py  service.py
tests/: test_composite_sink.py  test_dispatch_recovery.py  test_kafka_sink.py  test_outbox_replay.py  test_replay_cli.py  test_s3_object_sink.py  test_scribe_mvp.py  test_validation_serialization_compatibility.py
